# lead_barry

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  TRAIT_OBJECT_SOLUTION.md  UNITS_LIBRARY.md  build.rs  debug_probes.md  memory.x  requirements.txt  test-all.sh
.cargo/: config.toml
.github/workflows/: ci_checks.yml  github_actions.md  rust.yml
build_utils/build_log/src/: build_log_impl.rs
build_utils/file_operations/src/: lib.rs
common/: Cargo.toml
common/src/: any_string.rs  lib.rs  string_tools.rs
docs/: README.md
docs/hardware/: README.md
docs/hardware/9_12v_controlled_dc_dc/: 9_12v_controlled_dc_dc.ipynb
docs/hardware/bat_switch/: bat_switch.ipynb
docs/hardware/variadic_voltage_dc_dc/: variadic_voltage_dc_dc.ipynb
examples/lora_rx/: Cargo.toml  build.rs
examples/lora_rx/.cargo/: config.toml
examples/lora_tx/: Cargo.toml
firmware/: Cargo.toml  TRAIT_OBJECT_SOLUTION.md  debug_probes.md
firmware/.cargo/: config.toml
firmware/apps/firmware/lead_barry/: Cargo.toml
firmware/apps/firmware/lead_barry/.cargo/: config.toml  config_flash.toml
firmware/apps/firmware/lead_barry/src/: async_infinite_stream.rs  async_stream.rs  board.rs  main.rs  main_logic_controller.rs  reset.rs  rtc.rs  shared_resources.rs  units.rs
firmware/apps/firmware/lead_barry/src/configuration/: configuration_storage.rs  mod.rs
firmware/apps/firmware/lead_barry/src/configuration/settings/: mod.rs  network_settings.rs  static_ip_config.rs  wifi_ap_settings.rs  wifi_settings.rs
firmware/apps/firmware/lead_barry/src/input/: button_controller.rs
firmware/apps/firmware/lead_barry/src/led_controller/: mod.rs  pwm_led_driver.rs
firmware/apps/firmware/lead_barry/src/pwm_led_controller/: pwm_led_driver.rs
firmware/apps/firmware/lead_barry/src/ui/: data_model.rs  mod.rs  screen.rs  screen_view.rs  ui_interface.rs
firmware/apps/firmware/lead_barry/src/ui/screens/: ip_satus.rs  message.rs  mod.rs  naming_convention.md  qr_code.rs  vcp.rs  welcome.rs  wifi_ap.rs  wifi_status.rs
firmware/apps/firmware/lead_barry/src/ui/screens/common/: message.rs  mod.rs  status.rs
firmware/apps/firmware/lead_barry/src/vcp_sensors/: config.rs  data_model.rs  error.rs  events.rs  mod.rs  sensor_service.rs
firmware/apps/firmware/lead_barry/src/web_server/: http_server_context.rs  mod.rs
firmware/apps/firmware/lead_barry/src/wifi/: config.rs  wifi_controller.rs  wifi_service.rs
firmware/apps/firmware/lead_barry/src/ws2812b_led_controller/: color.rs  constants.rs  decay_animation.rs  mod.rs  sine_animation.rs  ws2812b_led_driver.rs
firmware/apps/firmware/lora_rx/: Cargo.toml
firmware/apps/firmware/lora_tx/: Cargo.toml
firmware/apps/firmware/lora_tx/.cargo/: config_flash.toml
firmware/libs/common/src/: any_string.rs  lib.rs  string_tools.rs
firmware/scripts/: create_github_repo.sh
hardware/: README.md
hardware/9_12v_controlled_dc_dc/: 9_12v_controlled_dc_dc.ipynb
hardware/bat_switch/: bat_switch.ipynb
hardware/charge_pump/: charge_pump.ipynb
hardware/controlled_dc_dc/: controlled_dc_dc.ipynb
hardware/kicad/LeadBarry_v1/: BatterySwitch.kicad_sch  ControlledDcDc.kicad_sch  CurrentAndVoltageControl.kicad_sch  LeadBarry_v1.kicad_prl  LeadBarry_v1.kicad_pro  LeadBarry_v1.kicad_sch  LoadSwitch.kicad_sch  RegulatedVoltage_DcDc.kicad_sch
hardware/variadic_voltage_dc_dc/: variadic_voltage_dc_dc.ipynb
lead_barry/: Cargo.toml  build.rs  memory.x
lead_barry/.cargo/: config.toml  config_flash.toml
lead_barry/src/: async_infinite_stream.rs  async_stream.rs  global_state.rs  main.rs  main_logic_controller.rs  reset.rs  shared_resources.rs
lead_barry/src/configuration/: configuration_storage.rs  flash_storage.rs
lead_barry/src/configuration/settings/: mod.rs  network_settings.rs  static_ip_config.rs  wifi_ap_settings.rs  wifi_settings.rs
lead_barry/src/input/: button_controller.rs  mod.rs
lead_barry/src/led_controller/: mod.rs  pwm_led_driver.rs  sine_animation.rs
lead_barry/src/ui/: mod.rs  screen.rs
lead_barry/src/ui/screens/: ip_satus.rs  message.rs  mod.rs  naming_convention.md  vcp.rs  welcome.rs  wifi_ap.rs  wifi_status.rs
lead_barry/src/ui/screens/common/: base_screan_layout.rs  message.rs  mod.rs  status.rs
lead_barry/src/vcp_sensors/: config.rs  events.rs  sensor_service.rs
lead_barry/src/web_server/: http_server_context.rs  mod.rs
lead_barry/src/web_server/web/: main_configuration.html
lead_barry/src/wifi/: dhcp_server.rs  mod.rs  wifi_control_state.rs  wifi_controller.rs
protocols/: Cargo.toml
protocols/src/: lib.rs
scripts/: create_python_env.sh
src/: flash_storage.rs  global_state.rs  global_types.rs  ina3221_sensor.rs  main.rs  main_logic_controller.rs  matrix_ops.rs  optimization_demo.rs  precise_timing.rs  reset.rs  settings.rs  shared_resources.rs  sync_examples.rs  units.rs  units_examples.rs
src/config_server/: configuration.rs  http_config_server.rs  http_server_context.rs  mod.rs  temporal_handler.rs
src/config_server/web/: main_configuration.html
src/configuration/: configuration_storage.rs  mod.rs  settings.rs
src/configuration/settings/: mod.rs  network_settings.rs  static_ip_config.rs  wifi_ap_settings.rs  wifi_settings.rs
src/input/: actions.rs  button_controller.rs  mod.rs
src/led_controller/: constants.rs  decay_animation.rs  mod.rs  pwm_led_driver.rs
src/rtc/: mod.rs
src/ui/: collection.rs  data_model.rs  mod.rs  screen.rs  screen_animation.rs  screen_collection.rs  screen_ip_satus.rs  screen_vcp.rs  screen_vip.rs  screen_voltage.rs  screen_welcome.rs  screen_wifi_ap.rs  screen_wifi_status.rs  ui_interface.rs
src/ui/screens/: ip_satus.rs  message.rs  mod.rs  vcp.rs  welcome.rs  wifi_ap.rs  wifi_status.rs
src/vcp_sensors/: config.rs  data_model.rs  error.rs  events.rs  mod.rs  sensor_service.rs  vcp_data_model.rs  vcp_sensor_service.rs
src/web_server/: configuration.rs  http_main_page_handler.rs  http_server_context.rs  mod.rs  temporal_handler_storage.rs
src/wifi/: config.rs  dhcp_server.rs  mod.rs  wifi_control_state.rs  wifi_controller.rs  wifi_service.rs
(+5 files in other folders)
