[workspace]
members = [
  ".",
  "nanofish",
  "leasehund",
  "common",
  "ds323x-rs",
  "sx127x_lora",
  "sx127x_lora/examples/rp2040",
]

[package]
name = "lead_barry"
version = "0.1.0"
license = "MIT"
authors = [
  "Erik Rogers <erik@underlogic.tech>",
  "Dmytro Krasnianskyi <k.dimonych@gmail.com>",
]
edition = "2024"
repository = "https://github.com/kdimonych/lead_barry"
description = "The lead-acid battery management controller written in Rust for Raspberry Pi Pico."
readme = "README.md"
keywords = ["lead-acid", "battery"]
categories = ["embedded", "no-std", "no-std::no-alloc"]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", features = ["set-sp"] }
embedded-hal-async = "1.0"
embedded-hal = "1.0"
# Embedded graphics support
embedded-graphics = "0.8"
display-interface = { version = "0.5" }

# Debug logging
defmt = { version = "1", optional = true }
defmt-rtt = { version = "1", optional = true }
panic-probe = { version = "1" }
defmt-or-log = { version = "0.2.3", default-features = false }
log = { version = "0.4.29", optional = true }                  # For debug porpouses when not using defmt
env_logger = { version = "0.11", optional = true }             # For debug porpouses when not using defmt
# Optional: for RTT panic output when using log
panic-rtt-target = { version = "0.2.0", optional = true }
rtt-target = { version = "0.6.2", optional = true }
panic-halt = "1.0"

# Matrix and linear algebra libraries for embedded systems
nalgebra = { version = "0.34.1", default-features = false, features = [
  "macros",
  "libm",
] }
heapless = { version = "0.8", features = ["serde"] }
libm = "0.2.16"

# Critical section and atomics for embedded
portable-atomic = { version = "1.11.1", features = ["critical-section"] }
critical-section = "1.2.0"
static_cell = "2.1.1"
# For safe casting of types
bytemuck = { version = "1.24.0", features = ["derive"] }
postcard = { version = "1.1", default-features = false, features = ["use-crc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.6.0" }

# Embassy
embassy-embedded-hal = { version = "0.5.0" }
embassy-executor = { version = "0.9", features = [
  "arch-cortex-m",
  "executor-thread",
] }
embassy-time = { version = "0.5" }
embassy-rp = { version = "0.8", features = [
  "rp2040",
  "rt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
  "intrinsics",
  "rom-v2-intrinsics",
] }
embassy-sync = "0.7"
embassy-futures = "0.1"
embassy-net = { version = "0.7", features = [
  "tcp",
  "udp",
  "dhcpv4",
  "medium-ethernet",
] }

# DHCP server
#leasehund = "0.2.0"
leasehund = { path = "./leasehund" }

# HTTP server/client
# nanofish = "0.9.1"
nanofish = { path = "./nanofish", features = ["ws"] }

# Alternative: Use rp-pico but you'll need to handle CYW43 separately
# rp-pico = "0.9"

# WiFi/bluetooth driver for the CYW43 chip on the Pico W
# cyw43 = { version = "0.5", features = ["firmware-logs","defmt"] }
cyw43 = "0.5"
cyw43-pio = "0.8"
# Firmware for CYW43 (Needed to include firmware binary for the CYW43 chip used in raspberry Pi Pico W)
cyw43-firmware = { version = "0.1.0", features = ["bluetooth", "wifi"] }

# BLE stack
# trouble-host = "0.4.0"

# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
# sparkfun-pro-micro-rp2040 = "0.8"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.11", features=["rt", "critical-section-impl"] }
# rp2040-boot2 = "0.3"

# Prerepherial device drivers
ssd1306 = { version = "0.10", features = ["async"] }
ina3221_async = { git = "https://github.com/kdimonych/ina3221_async", branch = "main", features = [
  "async",
] }
crc = "3.3.0"

# EEPROM
eeprom24x = "0.7.2"

# RTC
# ds323x = "0.7.0"
ds323x = { path = "./ds323x-rs", features = ["async"] }

# Internal workspace crates
common = { path = "./common" }

[features]
default = ["defmt"]
log = [
  "dep:panic-rtt-target",
  "dep:rtt-target",
  "dep:env_logger",
  "dep:log",
  "defmt-or-log/log",
  "nanofish/log",
]
defmt = [
  "dep:defmt",
  "dep:defmt-rtt",
  "defmt-or-log/defmt",
  "panic-probe/print-defmt",
  "ds323x/defmt",
  "nanofish/defmt",
  "leasehund/defmt",
  "embassy-net/defmt",
  "embassy-rp/defmt",
  "embassy-time/defmt",
  "embassy-time/defmt-timestamp-uptime",
  "embassy-executor/defmt",
  "embassy-embedded-hal/defmt",
  "serde-json-core/defmt",
  "display-interface/defmt-03",
]


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 0
overflow-checks = true
strip = false           # Keep debug symbols

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

[build-dependencies]
dotenvy = "0.15"
flate2 = "1.1.5"
minify-html = "0.18.1"
regex = "1.12.3"
