[workspace]
resolver = "3"
members = [
  "lead_barry",
  "nanofish",
  "leasehund",
  "common",
  "ds323x-rs",
  "sx127x_lora",
  "sx127x_lora/examples/rp2040",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Dmytro Krasnianskyi <k.dimonych@gmail.com>"]
repository = "https://github.com/kdimonych/lead_barry"
description = "The lead-acid battery management controller written in Rust for Raspberry Pi Pico."
readme = "README.md"
keywords = ["lead-acid", "battery"]
categories = ["embedded", "no-std", "no-std::no-alloc"]

[workspace.dependencies]
# Currently, no dependencies

[profile.dev.package.'lead_barry']
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release.package.'lead_barry']
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 0
overflow-checks = true
strip = false           # Keep debug symbols

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
