[package]
edition = "2024"
name = "lora_rx"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
#-----------------------------------------------------------------------------#
# Internal dependencies
#-----------------------------------------------------------------------------#
lora-phy = { path = "../../../libs/lora-rs/lora-phy", features = [
    "lorawan-radio",
    "defmt-03",
] }
lorawan-device = { path = "../../../libs/lora-rs/lorawan-device", features = [
    "embassy-time",
    "defmt-03",
] }

#-----------------------------------------------------------------------------#
# External dependencies
#-----------------------------------------------------------------------------#
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-rp = { version = "0.8.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }

defmt = "1.0.1"
defmt-rtt = "1.1.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }

static_cell = { version = "2.0.0" }
portable-atomic = { version = "1.5", features = [
    "critical-section",
] } # needed for static_cell on thumbv6

smart-leds = "0.4.0"

[build-dependencies]
build_log = { path = "../../../build/build_utils/build_log" }
cargo_command = { path = "../../../build/build_utils/cargo_command" }
file_operations = { path = "../../../build/build_utils/file_operations" }
